--- a/unit10.hw/css/bai1.css
+++ b/unit10.hw/css/bai1.css
@@ -38,3 +38,25 @@ img{
 .prev:hover, .next:hover {
     background-color: #EB5B5B;
 }
+.ul{
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    right: 200px;
+    top: 400px;
+    list-style: none;
+}
+.ul>li{
+    float: left;
+    margin-top: 100px;
+    margin-left: 10px;
+    width: 20px;
+    height: 20px;
+    background: #ffff;
+    opacity: 0.3;
+    z-index: 10;
+}
+.active, .ul>li:hover{
+    cursor: pointer;
+    border: 2px solid red;
+}
