--- a/unit11.hw/css/bai1.css
+++ b/unit11.hw/css/bai1.css
@@ -1,4 +1,65 @@
-.content .nav-item{
-	display: block;
+form{
+	width: 70%;
+	margin:0 auto;
 }
-.content .
+#container{
+	position: relative;
+}
+#container p{
+	width: 15%;
+	height: 25px;
+	line-height: 25px;
+	float:left;
+	padding:10px;
+	margin:2px;
+	margin-right: 5px;
+	background: #D0CACA;
+	border: 1px solid white;
+	border-radius: 5px;
+}
+
+legend{
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.step>div{
+	position: absolute;
+	z-index: 0;
+	top: 60px;
+	left: 2px;
+	width:75%;
+	height:430px;
+	background: #ccc;
+	padding:10px 20px 10px 20px;
+}
+#container .button{
+	position: absolute;
+    bottom: -530px;
+    right: 230px;
+    cursor: pointer;
+}
+#container .button>span{
+	margin-left: 10px;
+	padding: 6px;
+	background: #2184be;
+	color: white;
+	border-radius: 3px;
+}
+#next{
+	width: 50px;
+}
+#container .active p{
+	background: #2184BE;
+	color: white;
+}
+#container .active div{
+	z-index:1;
+}
+.error{
+	color:red;
+}
+#container input{
+	padding-top: 5px;
+	margin-top: 10px;
+}
